Finished auth endpoints
